# nxx

./: .gitignore  .lcovrc  README.md  Taskfile.dist.yml  Taskfile.yml  codecov.yml  meson.build  meson.options  meson_options.txt
nxx/: meson.build  nxxint.hpp  nxxint.test.cpp
nxx/nxx/: def.hpp  def.test.cpp  format.cpp  format.test.cpp  meson.build  static-array.hpp  static-array.test.cpp  string-view.hpp  string-view.test.cpp
nxx/nxx/algorithm/: all-of.test.cpp  all.hpp  all.test.cpp  all_of.hpp  any-of.test.cpp  any.hpp  any.test.cpp  any_of.hpp  any_of.test.cpp  clamp.hpp  find-if.test.cpp  find.hpp  find.test.cpp  find_if.hpp  iota.hpp  iterator.hpp  max.hpp  max.test.cpp  min.hpp  min.test.cpp  none-of.test.cpp  none.hpp  none.test.cpp  none_of.hpp
nxx/nxx/concept/: integral.hpp  same_as.hpp
nxx/nxx/container/: array.hpp  bitmap.hpp  span.hpp  span.test.cpp  static-array.hpp  static-array.test.cpp  static_array.hpp  static_array.test.cpp
nxx/nxx/container/details/: array_base.hpp  array_base_type.hpp  array_data.cpp  array_data.hpp  array_object.hpp  array_param_type.hpp  array_size_type.hpp  array_trivial.hpp
nxx/nxx/debug/: assert-test-impl.cpp  assert.hpp
nxx/nxx/memory/: address-of.hpp  alignment.hpp  alloc-test-impl.cpp  alloc.hpp  alloc_test_impl.cpp  allocate.hpp  construct-at.hpp  construct-at.test.cpp  construct_at.hpp  construct_at.test.cpp  memory-block.hpp  memory-block.test.cpp  memory_block.hpp  memory_block.test.cpp  new-test-impl.cpp  new.cpp  new.hpp  new_test_impl.cpp  object.mock.hpp  pointer-traits.hpp  pointer_traits.hpp  unique-ptr.hpp  unique-ptr.test.cpp  unique_ptr.hpp  utility.cpp  utility.hpp  voidify.hpp
nxx/nxx/memory/allocator/: affix_allocator.hpp  allocator.mock.hpp  allocator_reallocation.hpp  allocator_trait.hpp  allocator_trait.test.cpp  allocator_traits.hpp  fallback-allocator.hpp  fallback-allocator.test.cpp  fallback_allocator.hpp  fallback_allocator.test.cpp  free_list_allocator.hpp  null-allocator.hpp  null-allocator.test.cpp  null_allocator.hpp  null_allocator.test.cpp  prefixed_size_allocator.hpp  segregator_allocator.hpp  (+6 more)
nxx/nxx/string/: cstring.hpp  digit.hpp  format-argument.hpp  format-to.hpp  format-to.test.cpp  format.cpp  format.hpp  format.test.cpp  format_argument.hpp  format_specification.hpp  format_to.hpp  format_to.test.cpp  string-view.hpp  string-view.test.cpp  string_view.hpp  to-string-view.hpp  to-string-view.test.cpp  to_string_view.hpp  utility.hpp
nxx/nxx/type-trait/: add-const-volatile.hpp  add-const-volatile.test.cpp  add-const.hpp  add-const.test.cpp  add-lvalue-reference.test.cpp  add-pointer.hpp  add-pointer.test.cpp  add-rvalue-reference.test.cpp  add-volatile.hpp  add-volatile.test.cpp  bits-of.hpp  bits-of.test.cpp  conditional.hpp  conditional.test.cpp  decay.hpp  decay.test.cpp  integral-constant.test.cpp  is-arithmetic.hpp  is-arithmetic.test.cpp  is-base-of.test.cpp  is-const.hpp  is-const.test.cpp  is-convertible.hpp  is-copy-assignable.hpp  is-copy-constructible.hpp  is-enum-class.hpp  is-enum-class.test.cpp  is-enum.hpp  is-enum.test.cpp  is-floating-point.hpp  is-floating-point.test.cpp  is-integral.hpp  is-integral.test.cpp  is-move-assignable.hpp  is-move-constructible.hpp  is-reference.hpp  is-same.hpp  is-same.test.cpp  is-signed-integer.hpp  is-signed-integer.test.cpp  (+17 more)
nxx/nxx/type_trait/: add_const.hpp  add_const_volatile.hpp  add_const_volatile.test.cpp  add_cv.hpp  add_lvalue_reference.hpp  add_pointer.hpp  add_pointer.test.cpp  add_rvalue_reference.hpp  add_volatile.hpp  add_volatile.test.cpp  bits_of.hpp  conditional.hpp  conditional.test.cpp  copy_const_volatile.hpp  copy_const_volatile_ref.hpp  copy_cv.hpp  copy_cvref.hpp  decay.hpp  decay.test.cpp  integral_constant.hpp  integral_constant.test.cpp  is_arithmetic.hpp  is_arithmetic.test.cpp  is_array.hpp  is_assignable.hpp  is_base_of.hpp  is_const.hpp  is_constructible.hpp  is_convertible.hpp  is_copy_assignable.hpp  is_copy_constructible.hpp  is_destructible.hpp  is_enum.hpp  is_enum_class.hpp  is_floating_point.hpp  is_function.hpp  is_integral.hpp  is_lvalue_reference.hpp  is_move_assignable.hpp  is_move_constructible.hpp  (+30 more)
nxx/nxx/utility/: as-const.hpp  as_const.hpp  declval.hpp  forward.hpp  function.hpp  function.test.cpp  initializer_list.hpp  integer-sequence.hpp  integer-sequence.test.cpp  integer_sequence.hpp  integer_sequence.test.cpp  move.hpp  on-scope-exit.hpp  on-scope-exit.test.cpp  on_scope_exit.hpp  on_scope_exit.test.cpp  passkey.hpp  ref-wrap.hpp  ref-wrap.test.cpp  ref_wrap.test.cpp  source-location.hpp  source-location.test.cpp  source_location.hpp  source_location.test.cpp  swap.hpp  to-underlying.hpp  to-underlying.test.cpp  to_underlying.hpp
tests/: meson.build
tests/nxx/: def.test.cpp  meson.build
tests/nxx/algorithm/: all.test.cpp  all_of.test.cpp  any.test.cpp  clamp.test.cpp  find.test.cpp  find_if.test.cpp  iota.test.cpp  min.test.cpp  none.test.cpp  none_of.test.cpp
tests/nxx/container/: array.test.cpp  bitmap.test.cpp  span.test.cpp
tests/nxx/debug/: assert.test.cpp
tests/nxx/memory/: alignment.test.cpp  allocate_test_impl.cpp  construct_at.test.cpp  memory_block.test.cpp  object.mock.hpp  unique_ptr.test.cpp  utility.test.cpp
tests/nxx/string/: format.test.cpp  format_to.test.cpp  string_view.test.cpp  to_string_view.test.cpp  utility.test.cpp
tests/nxx/type_trait/: add_const.test.cpp  add_cv.test.cpp  add_lvalue_reference.test.cpp  add_pointer.test.cpp  add_rvalue_reference.test.cpp  add_volatile.test.cpp  bits_of.test.cpp  conditional.test.cpp  decay.test.cpp  integral_constant.test.cpp  is_arithmetic.test.cpp  is_base_of.test.cpp  is_const.test.cpp  is_enum.test.cpp  is_enum_class.test.cpp  is_floating_point.test.cpp  is_integral.test.cpp  is_same.test.cpp  is_signed.test.cpp  is_signed_integer.test.cpp  is_static_array.test.cpp  remove_const.test.cpp  remove_const_volatile.test.cpp  remove_cv.test.cpp  remove_pointer.test.cpp  remove_reference.test.cpp  remove_volatile.test.cpp
tests/nxx/utility/: source_location.test.cpp  swap.test.cpp  to_underlying.test.cpp
(+69 files in other folders)
