tests = files(
    # utility
    'debug/assert_test_impl.cpp',
    'memory/allocate_test_impl.cpp',

    # tests
    'algorithm/all_of.test.cpp',
    'algorithm/all.test.cpp',
    'algorithm/any_of.test.cpp',
    'algorithm/any.test.cpp',
    'algorithm/clamp.test.cpp',
    'algorithm/find_if.test.cpp',
    'algorithm/find.test.cpp',
    'algorithm/max.test.cpp',
    'algorithm/min.test.cpp',
    'algorithm/none_of.test.cpp',
    'algorithm/none.test.cpp',
    'debug/assert.test.cpp',
    'container/bitmap.test.cpp',
    'container/span.test.cpp',
    'container/static_array.test.cpp',
    'memory/allocator/affix_allocator.test.cpp',
    'memory/allocator/allocator_traits.test.cpp',
    'memory/allocator/fallback_allocator.test.cpp',
    'memory/allocator/null_allocator.test.cpp',
    'memory/allocator/slab_allocator.test.cpp',
    'memory/allocator/stack_allocator.test.cpp',
    'memory/alignment.test.cpp',
    'memory/construct_at.test.cpp',
    'memory/memory_block.test.cpp',
    'memory/unique_ptr.test.cpp',
    'string/format_to.test.cpp',
    'string/format.test.cpp',
    'string/string_view.test.cpp',
    'string/to_string_view.test.cpp',
    'type_trait/macro/declare_has_method.macro.test.cpp',
    'type_trait/add_const_volatile.test.cpp',
    'type_trait/add_const.test.cpp',
    'type_trait/add_lvalue_reference.test.cpp',
    'type_trait/add_pointer.test.cpp',
    'type_trait/add_rvalue_reference.test.cpp',
    'type_trait/add_volatile.test.cpp',
    'type_trait/bits_of.test.cpp',
    'type_trait/conditional.test.cpp',
    'type_trait/decay.test.cpp',
    'type_trait/integral_constant.test.cpp',
    'type_trait/is_arithmetic.test.cpp',
    'type_trait/is_base_of.test.cpp',
    'type_trait/is_const.test.cpp',
    'type_trait/is_floating_point.test.cpp',
    'type_trait/is_integral.test.cpp',
    'type_trait/is_enum_class.test.cpp',
    'type_trait/is_enum.test.cpp',
    'type_trait/is_same.test.cpp',
    'type_trait/is_signed_integer.test.cpp',
    'type_trait/is_signed.test.cpp',
    'type_trait/is_static_array.test.cpp',
    'type_trait/remove_const_volatile.test.cpp',
    'type_trait/remove_const.test.cpp',
    'type_trait/remove_pointer.test.cpp',
    'type_trait/remove_reference.test.cpp',
    'type_trait/remove_volatile.test.cpp',
    'utility/integer_sequence.test.cpp',
    'utility/function.test.cpp',
    'utility/on_scope_exit.test.cpp',
    'utility/ref_wrap.test.cpp',
    'utility/source_location.test.cpp',
    'utility/swap.test.cpp',
    'utility/to_underlying.test.cpp',
    'def.test.cpp'
)